--- a/Galileo/Galileo/Galileo.csproj
+++ b/Galileo/Galileo/Galileo.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="4.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GalileoLibrary\GalileoLibrary.csproj" />
   </ItemGroup>
 
