--- a/Galileo/GalileoLibrary/GalileoLibrary.csproj
+++ b/Galileo/GalileoLibrary/GalileoLibrary.csproj
@@ -5,4 +5,8 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Extreme.Numerics" Version="7.0.14" />
+  </ItemGroup>
+
 </Project>
