--- a/Galileo/GalileoLibrary/GalileoLibrary.csproj
+++ b/Galileo/GalileoLibrary/GalileoLibrary.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Accord.Math" Version="3.8.0" />
     <PackageReference Include="Extreme.Numerics" Version="7.0.14" />
   </ItemGroup>
 
