--- a/Galileo/Galileo/Galileo.csproj
+++ b/Galileo/Galileo/Galileo.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Accord.Math" Version="3.8.0" />
     <PackageReference Include="Extreme.Numerics" Version="7.0.14" />
     <PackageReference Include="MathNet.Numerics" Version="4.12.0" />
   </ItemGroup>
