--- a/Galileo/Galileo/Galileo.csproj
+++ b/Galileo/Galileo/Galileo.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Accord.Math" Version="3.8.0" />
     <PackageReference Include="Extreme.Numerics" Version="7.0.14" />
     <PackageReference Include="MathNet.Numerics" Version="4.12.0" />
+    <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="18.3.0.42" />
   </ItemGroup>
 
   <ItemGroup>
